--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
   <button onclick="updateCoordinates()">逆変換</button>
   <p id="result2"></p>
   <h3>首都など</h3>
-  <table border="1">
+  <table border="1" id="Capitals">
     <tr>
       <td>国と地域</td>
       <td>首都</td>
@@ -1315,7 +1315,7 @@
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
   </table>
   <h3>世界遺産</h3>
-  <table border="1">
+  <table border="1" id="WorldHeritageSite">
     <tr>
       <td>World Heritage Site Name</td>
       <td>世界遺産名(日本語訳）</td>
@@ -8253,6 +8253,40 @@
       <td>4824.662</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
   </table>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      // HTMLのテーブル要素を取得
+      const table = document.getElementById("WorldHeritageSite");
+
+      // テーブル内の各行をループ処理
+      const rows = table.getElementsByTagName("tr");
+      for (let i = 1; i < rows.length; i++) {
+        const cells = rows[i].getElementsByTagName("td");
+        if (cells.length >= 2) {
+          const cell1Text = cells[0].textContent;
+          const cell2Text = cells[1].textContent;
+
+          // 1列目のセルをリンク化
+          const cell1Link = document.createElement("a");
+          cell1Link.href = `https://www.google.com/search?q=${encodeURIComponent(cell1Text)}`;
+          cell1Link.target = "_blank";
+          cell1Link.textContent = cell1Text;
+          cells[0].textContent = "";
+          cells[0].appendChild(cell1Link);
+
+          // 2列目のセルをリンク化
+          const cell2Link = document.createElement("a");
+          cell2Link.href = `https://www.google.com/search?q=${encodeURIComponent(cell2Text)}`;
+          cell2Link.target = "_blank";
+          cell2Link.textContent = cell2Text;
+          cells[1].textContent = "";
+          cells[1].appendChild(cell2Link);
+        }
+      }
+
+    });
+  </script>
   
   <h3>参考文献</h3>
   <a href="https://www.kaggle.com/datasets/ramjasmaurya/unesco-heritage-sites2021">UNESCO Heritage sites(2021)</a><br>
