--- a/index.html
+++ b/index.html
@@ -1851,8 +1851,8 @@
       <td>12736.786</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
-      <td>S&lt;U&gt;G&lt;/U&gt;ang Gwaay</td>
-      <td>ス&lt;U&gt;グ&lt;/U&gt;アン・グウェイ</td>
+      <td>SGang Gwaay</td>
+      <td>スグアン・グウェイ</td>
       <td>4195.457</td>
       <td>4834.399</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -2787,8 +2787,8 @@
       <td>11465.405</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
-      <td>Ulu&lt;U&gt;r&lt;/U&gt;u-Kata Tju&lt;U&gt;t&lt;/U&gt;a National Park</td>
-      <td>ウル&lt;U&gt;ル&lt;/U&gt;ウ カタ ジュ&lt;U&gt;ト&lt;/U&gt;国立公園</td>
+      <td>Uluru-Kata Tjuta National Park</td>
+      <td>ウルル カタ ジュト国立公園</td>
       <td>26533.778</td>
       <td>11929.589</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -3051,8 +3051,8 @@
       <td>7838.244</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
-      <td>Strasbourg, Grande-Île and &lt;em&gt;Neustadt&lt;/em&gt;</td>
-      <td>ストラスブール、グランディル、&lt;em&gt;ノイシュタット&lt;/em&gt;</td>
+      <td>Strasbourg, Grande-Île and em&gt;Neustadt/em&gt;</td>
+      <td>ストラスブール、グランディル、em&gt;ノイシュタット/em&gt;</td>
       <td>16034.121</td>
       <td>5226.456</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -3741,8 +3741,8 @@
       <td>6179.911</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
-      <td>Routes of Santiago de Compostela: &lt;i&gt;Camino Francés&lt;/i&gt; and Routes of Northern Spain</td>
-      <td>サンティアゴ・デ・コンポステーラのルート: &lt;i&gt;フランセス巡礼路&lt;/i&gt;とスペイン北部のルート</td>
+      <td>Routes of Santiago de Compostela: i&gt;Camino Francés/i&gt; and Routes of Northern Spain</td>
+      <td>サンティアゴ・デ・コンポステーラのルート: i&gt;フランセス巡礼路/i&gt;とスペイン北部のルート</td>
       <td>14827.535</td>
       <td>5784.97</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -4065,8 +4065,8 @@
       <td>6540.491</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
-      <td>Haeinsa Temple Janggyeong Panjeon, the Depositories for the &lt;I&gt;Tripitaka Koreana&lt;/I&gt; Woodblocks</td>
-      <td>海印寺 長慶板殿、&lt;I&gt;高麗大蔵経&lt;/I&gt;版木を保管する所</td>
+      <td>Haeinsa Temple Janggyeong Panjeon, the Depositories for the I&gt;Tripitaka Koreana/I&gt; Woodblocks</td>
+      <td>海印寺 長慶板殿、I&gt;高麗大蔵経/I&gt;版木を保管する所</td>
       <td>26286.619</td>
       <td>6539.504</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -4239,8 +4239,8 @@
       <td>6015.582</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
-      <td>The &lt;I&gt;Trulli&lt;/I&gt; of Alberobello</td>
-      <td>アルベロベッロの&lt;I&gt;トゥルッリ&lt;/I&gt;</td>
+      <td>The I&gt;Trulli/I&gt; of Alberobello</td>
+      <td>アルベロベッロのI&gt;トゥルッリ/I&gt;</td>
       <td>16842.4</td>
       <td>6046.202</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -4269,8 +4269,8 @@
       <td>6684.984</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
-      <td>Ancient &lt;I&gt;Ksour&lt;/I&gt; of Ouadane, Chinguetti, Tichitt and Oualata</td>
-      <td>ワダン、シンゲッティ、ティチット、ワラタの古代&lt;I&gt;クスール&lt;/I&gt;</td>
+      <td>Ancient I&gt;Ksour/I&gt; of Ouadane, Chinguetti, Tichitt and Oualata</td>
+      <td>ワダン、シンゲッティ、ティチット、ワラタの古代I&gt;クスール/I&gt;</td>
       <td>14383.795</td>
       <td>7916.155</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -4923,8 +4923,8 @@
       <td>6393.219</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
-      <td>Hortobágy National Park - the &lt;i&gt;Puszta&lt;/i&gt;</td>
-      <td>ホルトバージ国立公園 - &lt;i&gt;プスタ&lt;/i&gt;</td>
+      <td>Hortobágy National Park - the i&gt;Puszta/i&gt;</td>
+      <td>ホルトバージ国立公園 - i&gt;プスタ/i&gt;</td>
       <td>17176.328</td>
       <td>5334.165</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -5763,8 +5763,8 @@
       <td>6897.139</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
-      <td>&lt;I&gt;Sacri Monti&lt;/I&gt; of Piedmont and Lombardy</td>
-      <td>ピエモンテ州とロンバルディア州の&lt;I&gt;サクリ・モンティ&lt;/I&gt;</td>
+      <td>I&gt;Sacri Monti/I&gt; of Piedmont and Lombardy</td>
+      <td>ピエモンテ州とロンバルディア州のI&gt;サクリ・モンティ/I&gt;</td>
       <td>16155.147</td>
       <td>5507.961</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -6225,8 +6225,8 @@
       <td>6675.967</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
-      <td>Genoa: &lt;i&gt;Le Strade Nuove&lt;/i&gt; and the system of the&lt;i&gt; Palazzi dei Rolli&lt;/i&gt;</td>
-      <td>ジェノヴァ: &lt;i&gt;Le Strade Nuove&lt;/i&gt; と&lt;i&gt;Palazzi dei Rolli&lt;/i&gt; のシステム</td>
+      <td>Genoa: i&gt;Le Strade Nuove/i&gt; and the system of thei&gt; Palazzi dei Rolli/i&gt;</td>
+      <td>ジェノヴァ: i&gt;Le Strade Nuove/i&gt; とi&gt;Palazzi dei Rolli/i&gt; のシステム</td>
       <td>16134.834</td>
       <td>5672.805</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -6249,8 +6249,8 @@
       <td>7922.011</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
-      <td>&lt;i&gt;Aflaj&lt;/i&gt; Irrigation Systems of Oman</td>
-      <td>オマーンの&lt;i&gt;アフラジ&lt;/i&gt;灌漑システム</td>
+      <td>i&gt;Aflaj/i&gt; Irrigation Systems of Oman</td>
+      <td>オマーンのi&gt;アフラジ/i&gt;灌漑システム</td>
       <td>20275.447</td>
       <td>7731.176</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -6369,8 +6369,8 @@
       <td>10965.266</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
-      <td>Central University City Campus of the &lt;i&gt;Universidad Nacional Autónoma de México&lt;/i&gt; (UNAM)</td>
-      <td>&lt;i&gt;メキシコ国立自治大学&lt;/i&gt; (UNAM) の中央大学都市キャンパス</td>
+      <td>Central University City Campus of the i&gt;Universidad Nacional Autónoma de México/i&gt; (UNAM)</td>
+      <td>i&gt;メキシコ国立自治大学/i&gt; (UNAM) の中央大学都市キャンパス</td>
       <td>6924.255</td>
       <td>8057.733</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -6435,8 +6435,8 @@
       <td>5536.09</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
-      <td>Fujian &lt;em&gt;Tulou&lt;/em&gt;</td>
-      <td>福建省の&lt;em&gt;土楼&lt;/em&gt;</td>
+      <td>Fujian em&gt;Tulou/em&gt;</td>
+      <td>福建省のem&gt;土楼/em&gt;</td>
       <td>25399.555</td>
       <td>7548.565</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -7005,8 +7005,8 @@
       <td>8996.636</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
-      <td>Cultural Landscape of Bali Province: the &lt;em&gt;Subak&lt;/em&gt; System as a Manifestation of the &lt;em&gt;Tri Hita Karana&lt;/em&gt; Philosophy</td>
-      <td>バリ島の文化的景観:&lt;em&gt;トリ・ヒタ・ カラナ&lt;/em&gt;哲学の現れとしての&lt;em&gt;スバック&lt;/em&gt;システム</td>
+      <td>Cultural Landscape of Bali Province: the em&gt;Subak/em&gt; System as a Manifestation of the em&gt;Tri Hita Karana/em&gt; Philosophy</td>
+      <td>バリ島の文化的景観:em&gt;トリ・ヒタ・ カラナ/em&gt;哲学の現れとしてのem&gt;スバック/em&gt;システム</td>
       <td>25205.064</td>
       <td>10430.156</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -7203,8 +7203,8 @@
       <td>5651.994</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
-      <td>Wooden &lt;em&gt;Tserkvas&lt;/em&gt; of the Carpathian Region in Poland and Ukraine</td>
-      <td>ポーランドとウクライナのカルパティア地方の木製&lt;em&gt;ツェルクヴァ&lt;/em&gt;</td>
+      <td>Wooden em&gt;Tserkvas/em&gt; of the Carpathian Region in Poland and Ukraine</td>
+      <td>ポーランドとウクライナのカルパティア地方の木製em&gt;ツェルクヴァ/em&gt;</td>
       <td>17165.717</td>
       <td>5122.012</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -7749,8 +7749,8 @@
       <td>4558.612</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
-      <td>Venetian Works of Defence between the 16th and 17th Centuries: &lt;em&gt;Stato da Terra&lt;/em&gt; – Western &lt;em&gt;Stato da Mar&lt;/em&gt;</td>
-      <td>16 世紀から 17 世紀にかけてのヴェネツィアの防衛施設: &lt;em&gt;スタト ダ テラ&lt;/em&gt; – 西部の&lt;em&gt;スタト ダ マール&lt;/em&gt;</td>
+      <td>Venetian Works of Defence between the 16th and 17th Centuries: em&gt;Stato da Terra/em&gt; – Western em&gt;Stato da Mar/em&gt;</td>
+      <td>16 世紀から 17 世紀にかけてのヴェネツィアの防衛施設: em&gt;スタト ダ テラ/em&gt; – 西部のem&gt;スタト ダ マール/em&gt;</td>
       <td>16197.235</td>
       <td>5536.768</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -8001,8 +8001,8 @@
       <td>4962.055</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
-      <td>Royal Building of &lt;i&gt;Mafra&lt;/i&gt; – Palace, Basilica, Convent, &lt;i&gt;Cerco&lt;/i&gt; Garden and Hunting Park (&lt;i&gt;Tapada&lt;/i&gt;)</td>
-      <td>&lt;i&gt;マフラ&lt;/i&gt;の王立建物 – 宮殿、大聖堂、修道院、&lt;i&gt;チェルコ&lt;/i&gt;庭園、狩猟公園 (&lt;i&gt;タパダ&lt;/i&gt;)</td>
+      <td>Royal Building of i&gt;Mafra/i&gt; – Palace, Basilica, Convent, i&gt;Cerco/i&gt; Garden and Hunting Park (i&gt;Tapada/i&gt;)</td>
+      <td>i&gt;マフラ/i&gt;の王立建物 – 宮殿、大聖堂、修道院、i&gt;チェルコ/i&gt;庭園、狩猟公園 (i&gt;タパダ/i&gt;)</td>
       <td>14579.566</td>
       <td>6231.355</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
