--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@
 </head>
 <body>
   <h1>ワールド座標位置検索</h1>
-  各国首都と世界遺産(2021年7月まで)のtpコマンドは下記の表にあります。
   <h2>変換</h2>
   <p>
     緯度:
@@ -1325,7 +1324,7 @@
         <td>コピー用</td> </tr>
     <tr>
       <td>L’Anse aux Meadows National Historic Site</td>
-      <td>ランス・オ・メドー国定史跡</td>
+      <td>ランス オー メドウズ国定史跡</td>
       <td>10636.064</td>
       <td>4905.786</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -1385,7 +1384,7 @@
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
       <td>Mesa Verde National Park</td>
-      <td>メサ・ヴェルデ国立公園</td>
+      <td>メサ ベルデ国立公園</td>
       <td>6132.209</td>
       <td>6396.983</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -1403,7 +1402,7 @@
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
       <td>Madara Rider</td>
-      <td>マダラの騎士像</td>
+      <td>マダラライダー</td>
       <td>17686.885</td>
       <td>5788.595</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -1481,7 +1480,7 @@
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
       <td>Fasil Ghebbi, Gondar Region</td>
-      <td>ファジル・ゲビ、ゴンダール地方</td>
+      <td>ファシル ゲビ、ゴンダール地方</td>
       <td>18566.012</td>
       <td>8645.352</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -1535,7 +1534,7 @@
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
       <td>Tchogha Zanbil</td>
-      <td>チョガ・ザンビール</td>
+      <td>チョガ・ザンビル</td>
       <td>19507.558</td>
       <td>6902.629</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -1547,7 +1546,7 @@
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
       <td>Meidan Emam, Esfahan</td>
-      <td>メイダン エマム、イスファハン</td>
+      <td>メイダン エマム、エスファハン</td>
       <td>19776.386</td>
       <td>6841.196</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -1619,7 +1618,7 @@
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
       <td>Amphitheatre of El Jem</td>
-      <td>エルジェムの円形闘技場</td>
+      <td>エル ジェムの円形劇場</td>
       <td>16286.115</td>
       <td>6588.456</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -1667,7 +1666,7 @@
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
       <td>Al Qal'a of Beni Hammad</td>
-      <td>ベニ・ハンマードの城塞</td>
+      <td>ベニ・ハマドのアル・カラ</td>
       <td>15781.787</td>
       <td>6537.876</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -1721,7 +1720,7 @@
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
       <td>Asante Traditional Buildings</td>
-      <td>アシャンティの伝統的な建物</td>
+      <td>アサンテの伝統的な建物</td>
       <td>15235.497</td>
       <td>9178.967</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -1739,7 +1738,7 @@
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
       <td>Ħal Saflieni Hypogeum</td>
-      <td>ハル・サフリエニの地下墳墓</td>
+      <td>アル・サフリエニ地下墳墓</td>
       <td>16609.872</td>
       <td>6532.74</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -1769,7 +1768,7 @@
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
       <td>Archaeological Ruins at Moenjodaro</td>
-      <td>モヘンジョダロの考古学遺跡</td>
+      <td>モエンジョダロの考古学遺跡</td>
       <td>21178.693</td>
       <td>7338.204</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -1781,7 +1780,7 @@
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
       <td>Buddhist Ruins of Takht-i-Bahi and Neighbouring City Remains at Sahr-i-Bahlol</td>
-      <td>タフテ・バヒーの仏教遺跡群とサハリ・バハロールの近隣都市遺跡群</td>
+      <td>タクティバヒの仏教遺跡と近隣都市の遺跡、サーリバロール</td>
       <td>21503.004</td>
       <td>6682.448</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -1852,14 +1851,14 @@
       <td>12736.786</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
-      <td>SUGUang Gwaay</td>
+      <td>SGang Gwaay</td>
       <td>スカン・グアイ</td>
       <td>4195.457</td>
       <td>4834.399</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
       <td>Head-Smashed-In Buffalo Jump</td>
-      <td>ヘッドスマッシュトインバッファロージャンプ</td>
+      <td>ヘッドスマッシュインバッファロージャンプ</td>
       <td>5692.079</td>
       <td>5102.69</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -1943,7 +1942,7 @@
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
       <td>Djoudj National Bird Sanctuary</td>
-      <td>ジュッジ鳥類国立公園</td>
+      <td>ジョウジ国立鳥類保護区</td>
       <td>13990.707</td>
       <td>8314.249</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -2788,8 +2787,8 @@
       <td>11465.405</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
-      <td>UluUr/Uu-Kata TjuUt/Ua National Park</td>
-      <td>ウルUル/Uウ カタ ジュUト/U国立公園</td>
+      <td>Uluru-Kata Tjuta National Park</td>
+      <td>ウルル カタ ジュト国立公園</td>
       <td>26533.778</td>
       <td>11929.589</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -3052,8 +3051,8 @@
       <td>7838.244</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
-      <td>Strasbourg, Grande-Île and emNeustadt/em</td>
-      <td>ストラスブール、グランディル、emノイシュタット/em</td>
+      <td>Strasbourg, Grande-Île and Neustadt</td>
+      <td>ストラスブール、グランディル、ノイシュタット</td>
       <td>16034.121</td>
       <td>5226.456</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -3742,8 +3741,8 @@
       <td>6179.911</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
-      <td>Routes of Santiago de Compostela: iCamino Francés/i and Routes of Northern Spain</td>
-      <td>サンティアゴ・デ・コンポステーラのルート: iフランセス巡礼路/iとスペイン北部のルート</td>
+      <td>Routes of Santiago de Compostela: Camino Francés/ and Routes of Northern Spain</td>
+      <td>サンティアゴ・デ・コンポステーラのルート: フランセス巡礼路/とスペイン北部のルート</td>
       <td>14827.535</td>
       <td>5784.97</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -4066,8 +4065,8 @@
       <td>6540.491</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
-      <td>Haeinsa Temple Janggyeong Panjeon, the Depositories for the ITripitaka Koreana/I Woodblocks</td>
-      <td>海印寺 長慶板殿、I高麗大蔵経/I版木を保管する所</td>
+      <td>Haeinsa Temple Janggyeong Panjeon, the Depositories for the Tripitaka Koreana/ Woodblocks</td>
+      <td>海印寺 長慶板殿、高麗大蔵経/版木を保管する所</td>
       <td>26286.619</td>
       <td>6539.504</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -4240,8 +4239,8 @@
       <td>6015.582</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
-      <td>The ITrulli/I of Alberobello</td>
-      <td>アルベロベッロのIトゥルッリ/I</td>
+      <td>The Trulli/ of Alberobello</td>
+      <td>アルベロベッロのトゥルッリ</td>
       <td>16842.4</td>
       <td>6046.202</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -4270,8 +4269,8 @@
       <td>6684.984</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
-      <td>Ancient IKsour/I of Ouadane, Chinguetti, Tichitt and Oualata</td>
-      <td>ワダン、シンゲッティ、ティチット、ワラタの古代Iクスール/I</td>
+      <td>Ancient Ksour/ of Ouadane, Chinguetti, Tichitt and Oualata</td>
+      <td>ワダン、シンゲッティ、ティチット、ワラタの古代クスール</td>
       <td>14383.795</td>
       <td>7916.155</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -4924,8 +4923,8 @@
       <td>6393.219</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
-      <td>Hortobágy National Park - the iPuszta/i</td>
-      <td>ホルトバージ国立公園 - iプスタ/i</td>
+      <td>Hortobágy National Park - the Puszta</td>
+      <td>ホルトバージ国立公園 - プスタ</td>
       <td>17176.328</td>
       <td>5334.165</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -5764,8 +5763,8 @@
       <td>6897.139</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
-      <td>ISacri Monti/I of Piedmont and Lombardy</td>
-      <td>ピエモンテ州とロンバルディア州のIサクリ・モンティ/I</td>
+      <td>Sacri Monti/ of Piedmont and Lombardy</td>
+      <td>ピエモンテ州とロンバルディア州のサクリ・モンティ</td>
       <td>16155.147</td>
       <td>5507.961</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -6226,8 +6225,8 @@
       <td>6675.967</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
-      <td>Genoa: iLe Strade Nuove/i and the system of thei Palazzi dei Rolli/i</td>
-      <td>ジェノヴァ: iLe Strade Nuove/i とiPalazzi dei Rolli/i のシステム</td>
+      <td>Genoa: Le Strade Nuove/ and the system of the Palazzi dei Rolli</td>
+      <td>ジェノヴァ: Le Strade Nuove/ とPalazzi dei Rolli/ のシステム</td>
       <td>16134.834</td>
       <td>5672.805</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -6250,8 +6249,8 @@
       <td>7922.011</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
-      <td>iAflaj/i Irrigation Systems of Oman</td>
-      <td>オマーンのiアフラジ/i灌漑システム</td>
+      <td>Aflaj/ Irrigation Systems of Oman</td>
+      <td>オマーンのアフラジ/灌漑システム</td>
       <td>20275.447</td>
       <td>7731.176</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -6370,8 +6369,8 @@
       <td>10965.266</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
-      <td>Central University City Campus of the iUniversidad Nacional Autónoma de México/i (UNAM)</td>
-      <td>iメキシコ国立自治大学/i (UNAM) の中央大学都市キャンパス</td>
+      <td>Central University City Campus of the Universidad Nacional Autónoma de México/ (UNAM)</td>
+      <td>メキシコ国立自治大学/ (UNAM) の中央大学都市キャンパス</td>
       <td>6924.255</td>
       <td>8057.733</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -6436,8 +6435,8 @@
       <td>5536.09</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
-      <td>Fujian emTulou/em</td>
-      <td>福建省のem土楼/em</td>
+      <td>Fujian Tulou</td>
+      <td>福建省の土楼</td>
       <td>25399.555</td>
       <td>7548.565</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -7006,8 +7005,8 @@
       <td>8996.636</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
-      <td>Cultural Landscape of Bali Province: the emSubak/em System as a Manifestation of the emTri Hita Karana/em Philosophy</td>
-      <td>バリ島の文化的景観:emトリ・ヒタ・ カラナ/em哲学の現れとしてのemスバック/emシステム</td>
+      <td>Cultural Landscape of Bali Province: the Subak/ System as a Manifestation of the Tri Hita Karana/ Philosophy</td>
+      <td>バリ島の文化的景観:トリ・ヒタ・ カラナ/哲学の現れとしてのスバック/システム</td>
       <td>25205.064</td>
       <td>10430.156</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -7204,8 +7203,8 @@
       <td>5651.994</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
-      <td>Wooden emTserkvas/em of the Carpathian Region in Poland and Ukraine</td>
-      <td>ポーランドとウクライナのカルパティア地方の木製emツェルクヴァ/em</td>
+      <td>Wooden Tserkvas/ of the Carpathian Region in Poland and Ukraine</td>
+      <td>ポーランドとウクライナのカルパティア地方の木製ツェルクヴァ</td>
       <td>17165.717</td>
       <td>5122.012</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -7750,8 +7749,8 @@
       <td>4558.612</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
-      <td>Venetian Works of Defence between the 16th and 17th Centuries: emStato da Terra/em – Western emStato da Mar/em</td>
-      <td>16 世紀から 17 世紀にかけてのヴェネツィアの防衛施設: emスタト ダ テラ/em – 西部のemスタト ダ マール/em</td>
+      <td>Venetian Works of Defence between the 16th and 17th Centuries: Stato da Terra/ – Western Stato da Mar</td>
+      <td>16 世紀から 17 世紀にかけてのヴェネツィアの防衛施設: スタト ダ テラ/ – 西部のスタト ダ マール</td>
       <td>16197.235</td>
       <td>5536.768</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -8002,8 +8001,8 @@
       <td>4962.055</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
-      <td>Royal Building of iMafra/i – Palace, Basilica, Convent, iCerco/i Garden and Hunting Park (iTapada/i)</td>
-      <td>iマフラ/iの王立建物 – 宮殿、大聖堂、修道院、iチェルコ/i庭園、狩猟公園 (iタパダ/i)</td>
+      <td>Royal Building of Mafra/ – Palace, Basilica, Convent, Cerco/ Garden and Hunting Park (Tapada/)</td>
+      <td>マフラ/の王立建物 – 宮殿、大聖堂、修道院、チェルコ/庭園、狩猟公園 (タパダ/)</td>
       <td>14579.566</td>
       <td>6231.355</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
