--- a/index.html
+++ b/index.html
@@ -7408,7 +7408,7 @@
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
       <td>Susa</td>
-      <td>須佐</td>
+      <td>スサ</td>
       <td>19484.897</td>
       <td>6885.532</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
@@ -7522,7 +7522,7 @@
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
       <td>Mistaken Point</td>
-      <td>間違えた点</td>
+      <td>ミステイクン・ポイント</td>
       <td>10840.991</td>
       <td>5437.471</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
