--- a/index.html
+++ b/index.html
@@ -7738,7 +7738,7 @@
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
     <tr>
       <td>Aphrodisias</td>
-      <td>媚薬</td>
+      <td>アフロディシアス</td>
       <td>17820.94</td>
       <td>6353.05</td>
     <td><button onclick="copyToClipboard(this,2)">tpコマンドをコピー</button></td> </tr>
